small spacing fix

--- a/less/main.less
+++ b/less/main.less
@@ -22,6 +22,5 @@ h2 {
 }
 
 h3 {
-	margin-top: 50px;
 	font-size:1em;
 }
